--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,6 +4,9 @@
 
 == Изменения в API
 
+Добавлен метод::
+Добавлено описание метода xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[RefreshObject(IObjectRef)] для обновления корневого объекта.
+
 Уведомления о заданиях::
 Класс xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService_CL.adoc[TaskMessagesEventHandlerService] расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
 +
