--- a/modules/ROOT/partials/pl-objectmodel.adoc
+++ b/modules/ROOT/partials/pl-objectmodel.adoc
@@ -44,6 +44,7 @@
 ****** xref:Platform-ObjectModel:ObjectContext.GetService_MT.adoc[]
 ****** xref:Platform-ObjectModel:ObjectContext.LockObject_MT.adoc[]
 ****** xref:Platform-ObjectModel:ObjectContext.LockObject_1_MT.adoc[]
+****** xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[]
 ****** xref:Platform-ObjectModel:ObjectContext.RollbackChanges_MT.adoc[]
 ****** xref:Platform-ObjectModel:ObjectContext.RollBackObject_MT.adoc[]
 ****** xref:Platform-ObjectModel:ObjectContext.SaveObject_1_MT.adoc[]
