GBL-2948 / TSK-3339 -- убрать облачную проверку подписей.

--- a/modules/samples/pages/object-model/check-signature.adoc
+++ b/modules/samples/pages/object-model/check-signature.adoc
@@ -1,4 +1,4 @@
-= Проверка действительности ЭП в документе
+= Проверка подлинности ЭП в документе
 
 Ниже приведён пример проверки действительности подписи, установленной на поля документа. В этом случае проверка подписи на файлах не проводится. Для проверки вызывается метод `CheckActualSignature` сервиса документов `IDocumentService`.
 
