обособление при необходимости

--- a/modules/BackOffice-ObjectModel-Services-ICryptService/pages/ICryptService.RemoveEncryption_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ICryptService/pages/ICryptService.RemoveEncryption_MT.adoc
@@ -38,7 +38,7 @@ fileId:::
 
 == Примеры
 
-Приведенный ниже пример содержит код скрипта карточки типа _Документ_, который расшифровывает основные файла текущей карточки. В ходе работы скрипта будет вызвана, при необходимости, форма для выбора сертификата шифрования.
+Приведенный ниже пример содержит код скрипта карточки типа _Документ_, который расшифровывает основные файла текущей карточки. В ходе работы скрипта будет вызвана при необходимости форма для выбора сертификата шифрования.
 
 [source,csharp]
 ----
