--- a/modules/samples/pages/solution/card-lib/card-component.adoc
+++ b/modules/samples/pages/solution/card-lib/card-component.adoc
@@ -13,7 +13,7 @@
 
 [NOTE]
 ====
-Проверку лицензии, при необходимости, можно реализовать несколькими методами (см. xref:solution/license.adoc[Лицензирование]).
+Проверку лицензии при необходимости можно реализовать несколькими методами (см. xref:solution/license.adoc[Лицензирование]).
 ====
 
 Класс компонента должен быть отмечен атрибутом `Guid`, значение которого соответствует _Идентификатору COM-компонента карточки_ (см. xref:solution/card-lib/card-metadata-scheme.adoc[Создание схемы метаданных карточки]).
