--- a/modules/Platform/pages/AssemblyResolver_CL.adoc
+++ b/modules/Platform/pages/AssemblyResolver_CL.adoc
@@ -37,7 +37,7 @@ public class AssemblyResolver
 
 Функциональность, реализуемую классом `AssemblyResolver`, позволяет получать сущности из клиентских сборок {dv} без необходимости загрузки этих сборок в каталог программы и GAC. {wincl} должен быть установлен.
 
-Метод в `StartResolve` подписывается на событие `AppDomain.CurrentDomain.AssemblyResolve` и, при необходимости, предоставляет сборки, размещенные в каталоге клиента {dv} и зарегистрированных каталогах.
+Метод в `StartResolve` подписывается на событие `AppDomain.CurrentDomain.AssemblyResolve` и при необходимости предоставляет сборки, размещенные в каталоге клиента {dv} и зарегистрированных каталогах.
 
 Конструктор класса `AssemblyResolver` автоматически вызывает метод `StartResolve`, поэтому отдельно вызывать его не требуется.
 
