--- a/modules/BackOffice-WinForms/pages/BaseCardControl.HasChanges_MT.adoc
+++ b/modules/BackOffice-WinForms/pages/BaseCardControl.HasChanges_MT.adoc
@@ -19,4 +19,4 @@ public virtual bool HasChanges()
 
 == Заметки
 
-Данный метод может быть вызван, к примеру, перед сохранением карточки, если пользователь должен быть предупрежден об отсутствии или наличии изменений в карточке.
+Данный метод может быть вызван, к примеру, перед сохранением карточки, если пользователь должен быть предупреждён об отсутствии или наличии изменений в карточке.
