Справочник состояний -> конструктор состояний

--- a/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILayoutService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILayoutService_IN.adoc
@@ -44,7 +44,7 @@ public interface ILayoutService
 |`GetAnyDesignTree(KindsCardKind, LayoutsLayout)` |Возвращает первое дерево дизайнов для указанного вида карточки с наличием в нем заданной разметки.
 |`GetAvailableLayouts(KindsCardKind, StatesState, IEnumerable<RoleModelRole>)` |Возвращает список разметок для указанного вида карточки, удовлетворяющих заданным условиям (состояние и роли).
 |`GetCardKindSettings(KindsCardKind)` |Возвращает настройки разметки для заданного вида карточки.
-|`GetCardKindStateSettings(KindsCardKind)` |Возвращает настройки вида карточки из справочника состояний.
+|`GetCardKindStateSettings(KindsCardKind)` |Возвращает настройки вида карточки из Конструктора состояний.
 |`GetCustomProperties(KindsCardKind, Boolean)` |Возвращает коллекцию дополнительных свойств из настроек вида карточки.
 |`GetCustomProperty(KindsCardKind, String, Boolean)` |Возвращает дополнительное свойство из настроек вида карточки.
 |`GetDesignTree(KindsCardKind)` |Возвращает дерево дизайнов для заданного вида карточки.
