--- a/modules/cards/pages/bo-lib/states-dictionary.adoc
+++ b/modules/cards/pages/bo-lib/states-dictionary.adoc
@@ -44,7 +44,7 @@ foreach (var item in states)
  Console.WriteLine(item.DefaultName); <.>
 }
 ----
-<.> Инициализация контекста объектов и получение сервиса для работы со справочником состояний.
+<.> Инициализация контекста объектов и получение сервиса для работы со Конструктором состояний.
 <.> Получение вида документа _Внутренний_.
 <.> Получение допустимых состояний для данного вида и вывод на консоль.
 
