--- a/modules/solutions/pages/cards/card-component/component.adoc
+++ b/modules/solutions/pages/cards/card-component/component.adoc
@@ -12,7 +12,7 @@
 .Можно выделить несколько типов программных компонент карточек:
 * *Карточки документов* -- программные компоненты, реализующие только интерфейс для ввода и редактирования данных.
 +
-Типичными примерами карточек документов являются карточки библиотеки "{bo}": _Документ_, _Задание_ и другие.
+Типичными примерами карточек документов являются карточки библиотеки _{bo}_: _Документ_, _Задание_ и другие.
 +
 * *Карточки справочников* -- программные компоненты, предназначенные для редактирования данных справочников.
 +
@@ -24,7 +24,7 @@
 +
 * *Специализированные карточки* -- системные карточки, служебные компоненты или утилиты, предназначенные для использования в составе других карточек или реализации специфической функциональности.
 +
-К числу таких карточек можно отнести системную карточку файла, карточку _Список файлов_ из библиотеки "{bo}" и другие.
+К числу таких карточек можно отнести системную карточку файла, карточку _Список файлов_ из библиотеки _{bo}_ и другие.
 
 .Разработка программного компонента состоит из нескольких этапов:
 * Реализация стандартных интерфейсов -- программирование кода карточки в соответствии со стандартами платформы {dv} для обеспечения её корректной работы в системе.
