--- a/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
+++ b/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
@@ -70,7 +70,7 @@ namespace DocsVision.Test
 }
 ----
 
-Чтобы карточка поддерживала механизм настройки разметок через справочник "Конструктор разметок", а также обладала дополнительной встроенной функциональностью (работа с бизнес-процессами, переходы по автомату состояний) следует унаследовать класс не от `CardControl`, а от `xref:BackOffice-WinForms:BaseCardControl_CL.adoc[BaseCardControl]`, входящей в сборку `DocsVision.BackOffice.WinForms.dll`. Данная сборка входит в клиентский инсталляционный пакет {dv} и является одним из компонентов библиотеки карточек "{bo}".
+Чтобы карточка поддерживала механизм настройки разметок через справочник "Конструктор разметок", а также обладала дополнительной встроенной функциональностью (работа с бизнес-процессами, переходы по автомату состояний) следует унаследовать класс не от `CardControl`, а от `xref:BackOffice-WinForms:BaseCardControl_CL.adoc[BaseCardControl]`, входящей в сборку `DocsVision.BackOffice.WinForms.dll`. Данная сборка входит в клиентский инсталляционный пакет {dv} и является одним из компонентов библиотеки карточек _{bo}_.
 
 [WARNING]
 ====
