GBL-2931 / TSK-3867 -- убрал DV 5 из названий продуктов, где это позволяется

--- a/modules/ROOT/pages/development.adoc
+++ b/modules/ROOT/pages/development.adoc
@@ -37,7 +37,7 @@
 
 Все примеры, за исключением тех случаев, когда указано иное, разработаны на языке C# в среде разработки Visual Studio.
 
-Для разработки внешних приложений потребуется установленный на компьютере разработки клиент {dv} 5.
+Для разработки внешних приложений потребуется установленный на компьютере разработки клиент {dv}.
 
 .В этом разделе представлена следующая информация:
 * xref:cards:general-information.adoc[].
