--- a/modules/appendix/pages/user-session-properties.adoc
+++ b/modules/appendix/pages/user-session-properties.adoc
@@ -1,6 +1,6 @@
 = Список свойств пользовательской сессии
 
-В данном разделе перечислены свойства пользовательской сессии, которые включают: сведения о текущем пользователе, сервере {dv} 5, лицензии и др.
+В данном разделе перечислены свойства пользовательской сессии, которые включают: сведения о текущем пользователе, сервере {dv}, лицензии и др.
 
 Следующий код демонстрирует пример получения имени учетной записи текущего пользователя из пользовательской сессии.
 
@@ -36,7 +36,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`CustomOperationsTimeout` |Время отклика сервера для сложной операции. Проверяется при включённом контроле сети.
 |`DatabaseType` |Тип базы данных: `0` -- Microsoft SQL; `1` -- PostgreSQL.
 |`EmployeeID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
-|`ExpirationDate` |Дата окончания срока действия лицензии для {dv} 5.
+|`ExpirationDate` |Дата окончания срока действия лицензии для {dv}.
 |`ExtendedMetadata` |Флаг, указывающий, что база данных использует расширенные метаданные.
 |`Features` |Список идентификаторов разрешённых в лицензии дополнительных модулей {dv}.
 |`FileBlockSize` |Размер блока данных (в KB) для передачи файлов.
