Revert "Убрал приставку DV 5 у названий модулей"
This reverts commit 7fbad7192a97a97cbbfd9a8e9f71996525c6b24c.

--- a/modules/solutions/pages/cards/prepare-card-lib.adoc
+++ b/modules/solutions/pages/cards/prepare-card-lib.adoc
@@ -1,6 +1,6 @@
 = Подготовка библиотеки карточек
 
-Библиотека карточек объединяет несколько описаний карточек в одну логическую единицу -- решение. Например, системные карточки объединяются в одну библиотеку, а _{bo}_ -- в другую. В большинстве случаев одно разрабатываемое решение на платформе {dv} соответствует одной библиотеке.
+Библиотека карточек объединяет несколько описаний карточек в одну логическую единицу -- решение. Например, системные карточки объединяются в одну библиотеку, а "{bo}" -- в другую. В большинстве случаев одно разрабатываемое решение на платформе {dv} соответствует одной библиотеке.
 
 При последующем распространении библиотеки карточек устанавливаются на клиентские компьютеры целиком.
 
