--- a/modules/cards/pages/create-card.adoc
+++ b/modules/cards/pages/create-card.adoc
@@ -13,7 +13,7 @@ CardData card = userSession.CardManager.CreateCardData(new Guid("6E39AD2B-E930-4
 
 [NOTE]
 ====
-Идентификатор типа карточки можно посмотреть в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки], либо в схеме карточки, например, используя программу "CardManager" из комплекта _{rk}_.
+Идентификатор типа карточки можно посмотреть в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки], либо в схеме карточки, например, используя программу "CardManager" из комплекта "{rk}".
 ====
 
 Если необходимо создать карточку с определённым идентификатором, можно воспользоваться соответствующей перегрузкой метода:
