Поменял кавычки и изменил некоторые формулировки

--- a/modules/cards/pages/access-control.adoc
+++ b/modules/cards/pages/access-control.adoc
@@ -170,5 +170,5 @@ card.SetAccessControl(cardDataSecurity); <.>
 
 [NOTE]
 ====
-Значения битовых флагов стандартных прав приведены в таблице: xref:appendix:permission-flags.adoc["Битовые флаги стандартных прав доступа"]
+Значения битовых флагов стандартных прав приведены в таблице: "xref:appendix:permission-flags.adoc[Битовые флаги стандартных прав доступа]".
 ====
