--- a/modules/cards/pages/bo-lib/states-dictionary.adoc
+++ b/modules/cards/pages/bo-lib/states-dictionary.adoc
@@ -48,4 +48,4 @@ foreach (var item in states)
 <.> Получение вида документа _Внутренний_.
 <.> Получение допустимых состояний для данного вида и вывод на консоль.
 
-См. также пример из раздела xref:bo-lib/task.adoc["Задание"]
+См. также пример из раздела "xref:bo-lib/task.adoc[Задание]"
