--- a/modules/solutions/pages/cards/prepare-card-lib.adoc
+++ b/modules/solutions/pages/cards/prepare-card-lib.adoc
@@ -28,7 +28,7 @@ image::ROOT:lib-description.png[Описание библиотеки]
 
 [NOTE]
 ====
-Работа с вкладкой _Reports_ описана в разделе xref:cards:use-reports.adoc[Использование отчётов], с вкладкой _Installers_ -- в разделе xref:distribution.adoc["Распространение решения"], а с вкладкой _Log_ -- в разделе xref:views:event-logs.adoc["Журналирование"].
+Работа с вкладкой _Reports_ описана в разделе "xref:cards:use-reports.adoc[Использование отчётов]", с вкладкой _Installers_ -- в разделе "xref:distribution.adoc[Распространение решения]", а с вкладкой _Log_ -- в разделе "xref:views:event-logs.adoc[Журналирование]".
 ====
 
 После создания и описания всех свойств библиотеки её название появится в левой панели окна _CardManager_. После чего можно приступать к описанию схем метаданных карточек, входящих в библиотеку.
