--- a/modules/solutions/pages/extensions/extensions.adoc
+++ b/modules/solutions/pages/extensions/extensions.adoc
@@ -4,12 +4,12 @@
 
 Также может потребоваться выполнять определённые методы в контексте сервера и с его привилегиями. Разработка расширений с использованием объектной модели {dv} не сложнее процесса разработки карточки, но создания плагинов обладает своими преимуществами.
 
-Методика разработки расширений для {wincl}а, во многом похожа на разработку карточек и описана в разделе xref:extensions/winclient.adoc["Расширение {wincl}а"].
+Методика разработки расширений для {wincl}а, во многом похожа на разработку карточек и описана в разделе "xref:extensions/winclient.adoc[Расширение {wincl}а]".
 
-Типы объектной модели, требующие реализации в процессе разработки серверных расширений, перечислены в разделе xref:extensions/server-plugins.adoc["Серверные расширения"].
+Типы объектной модели, требующие реализации в процессе разработки серверных расширений, перечислены в разделе "xref:extensions/server-plugins.adoc[Серверные расширения]".
 
-Раздел xref:extensions/console-plugin.adoc["Модуль расширения Консоли настройки"] освещает создание специфического компонента для программы {cns}.
+Раздел "xref:extensions/console-plugin.adoc[Модуль расширения Консоли настройки]" освещает создание специфического компонента для программы {cns}.
 
 .В данном разделе
-* xref:extensions/server-plugins.adoc[Серверные расширения]
-* xref:extensions/console-plugin.adoc[Модуль расширения Консоли настройки]
+* "xref:extensions/server-plugins.adoc[Серверные расширения]"
+* "xref:extensions/console-plugin.adoc[Модуль расширения Консоли настройки]"
