TSK-3914 / GBL-2629 / GBL-2760 / TSK-3924 СКД и API для неё

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,6 +4,11 @@
 
 == Изменения в API
 
+API для работы с МЧД::
+* Добавлен новый интерфейс, xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyService_IN.adoc[], включающий методы API для работы с МЧД.
+* Добавлено описание работы с системной карточкой МЧД.
+
+
 Добавлен метод::
 Добавлено описание метода xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[RefreshObject(IObjectRef)] для обновления корневого объекта.
 
