--- a/modules/ROOT/partials/bo-om-services-partners.adoc
+++ b/modules/ROOT/partials/bo-om-services-partners.adoc
@@ -4,3 +4,4 @@
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.DeleteEmployee_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindCompanyByNameOnServer_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindUnitGroups_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyService_IN.adoc[]
