TSK-3923 / GBL-2768 -- передоверие МЧД, много-много API

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Services_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Services_NS.adoc
@@ -42,6 +42,8 @@
 |`xref:BackOffice-ObjectModel-Services-INumerationRulesService:INumeratorCardService_IN.adoc[INumeratorCardService]` |Сервис для работы с карточкой нумератора.
 |`xref:BackOffice-ObjectModel-Services-INumerationRulesService:IOcspService_IN.adoc[IOcspService]` |Описывает функциональность сервиса для работы с центром установления статуса сертификатов по протоколу OCSP.
 |`xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPartnersService]` |Описывает сервис для работы со справочником контрагентов.
+|`xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` |Определяет методы формирования и чтения машиночитаемой доверенности.
+|`xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyService_IN]` |Предоставляет методы для работы с системной карточкой доверенности.
 |`xref:BackOffice-ObjectModel-Services-IReferenceListService:IReferenceListService_IN.adoc[IReferenceListService]` |Сервис для работы со списками ссылок на карточки.
 |`xref:BackOffice-ObjectModel-Services-I:IRoleModelService_IN.adoc[IRoleModelService]` |Сервис для работы с конструктором ролей.
 |`xref:BackOffice-ObjectModel-Services-I:IScriptingService_IN.adoc[IScriptingService]` |Сервис для работы с конструктором скриптов.
