--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,26 +4,38 @@
 
 == Изменения в API
 
-API для работы с МЧД::
-* Добавлен новый интерфейс, xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyService_IN.adoc[], включающий методы API для работы с МЧД.
-* Добавлено описание работы с системной карточкой МЧД.
-
+.API для работы с МЧД
+[%collapsible]
+====
+* Добавлено описание работы с xref:cards:attorney.adoc[системной карточкой доверенности].
+* `xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` -- системная карточка доверенности.
+* `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]` -- представляет секцию "Основная информация" системной карточки доверенности.
+* `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]` -- представляет секцию "Представитель" системной карточки доверенности.
+* `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]` -- представляет секцию "Полномочия" системной карточки доверенности.
+* `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]` -- представляет cекции "Системные карточки" дочерних доверенностей.
+* `xref:BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`  -- представляет полномочия для справочника полномочий МЧД.
+* `xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]` -- представляет коды полномочий для справочника полномочий МЧД.
+* `xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]` -- представляет группы полномочий для справочника полномочий МЧД.
+* `xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]` -- представляет типы доверенности карточки справочник полномочий МЧД.
+* `xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` -- определяет методы формирования и чтения машиночитаемой доверенности.
+* `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyServicec]` -- предоставляет методы для работы с системной карточкой доверенности.
+====
 
 Добавлен метод::
-Добавлено описание метода xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[RefreshObject(IObjectRef)] для обновления корневого объекта.
+Добавлено описание метода `xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[RefreshObject(IObjectRef)]` для обновления корневого объекта.
 
 Уведомления о заданиях::
-Класс xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService_CL.adoc[TaskMessagesEventHandlerService] расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
+Класс `xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService_CL.adoc[TaskMessagesEventHandlerService]` расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
 +
 --
-* xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationCc_MT.adoc[] -- позволяет вычислить адресатов в BCC.
-* xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationBcc_MT.adoc[] -- позволяет вычислить адресатов в CC.
+* `xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationCc_MT.adoc[]` -- позволяет вычислить адресатов в BCC.
+* `xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationBcc_MT.adoc[]` -- позволяет вычислить адресатов в CC.
 --
 +
-Класс xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService_CL.adoc[TaskGroupMessagesEventHandlerService] также расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
+Класс `xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService_CL.adoc[TaskGroupMessagesEventHandlerService]` также расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
 +
-* xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationBcc_MT.adoc[] -- позволяет вычислить адресатов в BCC.
-* xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationCc_MT.adoc[] -- позволяет вычислить адресатов в CC.
+* `xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationBcc_MT.adoc[]` -- позволяет вычислить адресатов в BCC.
+* `xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationCc_MT.adoc[]` -- позволяет вычислить адресатов в CC.
 
 Цитаты из файла::
 * Пространство имён `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]` дополнено классами и методами для работы с цитатами файлов:
