TSK-3923 / GBL-2768 -- передоверие МЧД, много-много API

--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -35,6 +35,7 @@ include::partial$bo-om-services-link.adoc[]
 include::partial$bo-om-services-lock.adoc[]
 include::partial$bo-om-services-numerationrules.adoc[]
 include::partial$bo-om-services-partners.adoc[]
+include::partial$bo-om-services-powers.adoc[]
 include::partial$bo-om-services-referencelist.adoc[]
 include::partial$bo-om-services-I.adoc[]
 include::partial$bo-om-services-staff.adoc[]
