TSK-3939 / GBL-3032 -- передача МЧД в реестр

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
@@ -31,8 +31,8 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |`ParentalPowerOfAttorney` |Родительская доверенность.
 |`RevocationRequestDate` |Дата и время поступления заявления на отзыв.
 |`RevocationDate` |Дата отзыва.
-|`RegTransferStatus` |Статус передачи в реестр.
-|`Representative` |Представитель.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[RegTransferStatus]` |Статус передачи в реестр.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[Representative]` |Представитель.
 |===
 
 == Поля
@@ -41,7 +41,7 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`StatusProperty` |Определяет свойство "Статус доверенности".
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[StatusProperty]` |Определяет свойство "Статус доверенности".
 |`SignerProperty` |Определяет свойство "Подписант".
 |`PowerOfAttorneyStartDateProperty` |Определяет свойство "Дата совершения доверенности".
 |`PowerOfAttorneyEndDateProperty` |Определяет свойство "Срок действия доверенности".
