--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRegTransferStatuses_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRegTransferStatuses_EN.adoc
@@ -1,6 +1,6 @@
 = PowerOfAttorneyRegTransferStatuses -- перечисление
 
-Статус доверенности, который будет передан в реестр.
+Статус передачи доверенности в распределённый реестр ФНС.
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
