--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
@@ -1,6 +1,6 @@
 = PowerOfAttorneySubsidiaryPowersOfAttorney -- класс
 
-Представляет cекции "Системные карточки" дочерних доверенностей.
+Представляет cекции "Системные карточки дочерних доверенностей".
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -18,7 +18,7 @@ public sealed class PowerOfAttorneySubsidiaryPowersOfAttorney : BaseCardSectionR
 |===
 |Имя |Описание
 
-|`PowerOfAttorney` |Системная карточка дочерней доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` |Системная карточка дочерней доверенности.
 |===
 
 == Поля
