GBL-2976 / TSK-3955 -- организация (ИП и компания), индивид (сотрудник компании)

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentative_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentative_CL.adoc
@@ -18,7 +18,7 @@ public sealed class PowerOfAttorneyRepresentative: BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`Individual` |Представитель физическое лицо.
+|`Individual` |Представитель физическое лицо (сотрудник из справочника сотрудников).
 |`Organization` |Представитель юридическое лицо (организация, индивидуальный предприниматель).
 |===
 
