GBL-2982 / TSK-3959 -- форматы МЧД

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowersCode_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowersCode_CL.adoc
@@ -19,7 +19,7 @@ public class PowersCode : ObjectBase
 |Имя |Описание
 
 |`Name` |Имя кода полномочий.
-|`Description` |Описание кода полномочий.
+|`Description` |Текстовое описание кода полномочий.
 |`Code` |Код полномочий.
 |`CreationDate` |Дата создания кода.
 |`UpdateDate` |Дата обновления кода.
