TSK-3963 / GBL-2978 -- примеры для МЧД

--- a/modules/cards/pages/attorney.adoc
+++ b/modules/cards/pages/attorney.adoc
@@ -1,4 +1,4 @@
-= Работа с машиночитаемой доверенностью
+= Взаимодействие с системной карточкой доверенности
 
 Системная карточка для работы с машиночитаемой доверенностью (далее - МЧД или доверенность) -- это карточка без UI. Полное название карточки: _Системная карточка доверенности_. Сокращение: СКД.
 
