Ну, допустим, поправил ошибки

--- a/modules/solutions/pages/extensions/console-plugin.adoc
+++ b/modules/solutions/pages/extensions/console-plugin.adoc
@@ -14,7 +14,7 @@
 
 [NOTE]
 ====
-{cns} -- универсальный инструмент для конфигурирования и администрирования сервера {dv}. Подробнее его использование рассмотрено в документации по xref:platform:console:settings-console.adoc[администрированию модуля {pl}].
+{cns} -- универсальный инструмент для конфигурирования и администрирования сервера {dv}. Подробнее его использование рассмотрено в документации по xref:dev@platform:console:settings-console.adoc[администрированию модуля {pl}].
 ====
 
 Механизм модулей расширения (Snap-Ins) является способом динамического расширения функциональности Консоли настройки новыми возможностями, которые могут появляться при установке в системе дополнительных модулей или решений. Аналогами подобного механизма могут выступать оснастки консоли администрирования (MMC) в Microsoft Windows или механизм плагинов (Plug-ins) в других программных средах.
