GBL-3013 -- установка других модулей, некоторые правки по тому, что сейчас может быть изменено

--- a/modules/samples/pages/components/employee-control.adoc
+++ b/modules/samples/pages/components/employee-control.adoc
@@ -346,8 +346,8 @@ public StaffEmployeeStatus? SelectedEmployeeStatus
 .Чтобы зарегистрировать сборку:
 . В редакторе реестра откройте ветку:
 +
-* `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\5.5\Client\PropertyControls` -- для текущего пользователя.
-* {hklm}\Software\DocsVision\BackOffice\5.5\Client\PropertyControls -- для всех пользователей.
+* `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\Client\PropertyControls` -- для текущего пользователя.
+* {hklm}\Software\DocsVision\BackOffice\Client\PropertyControls -- для всех пользователей.
 +
 . Добавьте новый строковый параметр с любым названием. В значении добавленного параметра должен быть указан путь к сборке компонента или строгое имя сборки:
 +
