--- a/modules/samples/pages/solution/installer/client.adoc
+++ b/modules/samples/pages/solution/installer/client.adoc
@@ -20,7 +20,7 @@
 +
 * Компонент карточки не регистрируется.
 * Компонент библиотеки карточек регистрируется командой: `regsvr32.exe Путь-к-файлу-компонента` (файл должен быть доступен всем пользователям) -- данная команда пишет в общую ветку реестра, для чего требуются права администратора. Можно зарегистрировать компонент для текущего пользователя, но для этого потребуется самостоятельно реализовать скрипт для регистрации COM-компонента в ветке реестра `HKEY_CURRENT_USER`.
-. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\5.5\Client\Applications` строковый параметр с названием решения. В значении должно быть указано название созданного подкаталога:
+. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\Client\Applications` строковый параметр с названием решения. В значении должно быть указано название созданного подкаталога:
 +
 [source,xml]
 ----
