--- a/modules/samples/pages/solution/installer/server.adoc
+++ b/modules/samples/pages/solution/installer/server.adoc
@@ -12,7 +12,7 @@
 . Выгрузить в созданный подкаталог компонент _SnapIn_ и пакет установки клиентской части решения.
 . Создать в каталоге решения подкаталог `CardPackage` и выгрузить в него `xref:solution/card-sql-package.adoc[CardPackage]`, а также связанные с ним XML-файлы.
 . Создать в каталоге решения подкаталог `Database` и выгрузить в него `xref:solution/card-sql-package.adoc[SqlPackage]`, а также схемы карточек и библиотека карточек, а также их ресурсы.
-. В ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\5.5\Console\SnapIns` создать раздел с названием решения.
+. В ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\Console\SnapIns` создать раздел с названием решения.
 . В созданный раздел добавить два строковых параметра:
 * `Path` -- путь к сборке _SnapIn_.
 * `TypeName` -- название класса _SnapIn_, который реализует интерфейс `ISnapIn`.
