--- a/modules/solutions/pages/control.adoc
+++ b/modules/solutions/pages/control.adoc
@@ -246,8 +246,8 @@ public sealed class ExtensionPackage : ControlExtensionInfoPackage
 +
 . После получения готовой сборки, её необходимо зарегистрировать на всех компьютерах в ветке реестра:
 +
-* `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\5.5\Client\PropertyControls` -- для текущего пользователя.
-* `{hklm}\Software\DocsVision\BackOffice\5.5\Client\PropertyControls` -- для всех пользователей.
+* `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\Client\PropertyControls` -- для текущего пользователя.
+* `{hklm}\Software\DocsVision\BackOffice\Client\PropertyControls` -- для всех пользователей.
 +
 В ветку требуется добавить строковый параметр, значение которого должно содержать полный путь к сборке, либо полное название класса, если сборка зарегистрирована в GAC.
 +
