--- a/modules/solutions/pages/extensions/server-plugins.adoc
+++ b/modules/solutions/pages/extensions/server-plugins.adoc
@@ -56,7 +56,7 @@ public CursorInfo GetSectionsSize()
 }
 ----
 
-Готовый модуль расширения необходимо зарегистрировать на сервере. Для этого нужно в ветке реестра `[{hklm}\SOFTWARE\DocsVision\Platform\5.5\Server\Extensions]` создать строковое значение с названием расширения (любое уникальное, на латинице, без пробелов и спец. знаков) и значением, представляющим полное имя класса, реализующего интерфейс расширения, к примеру:
+Готовый модуль расширения необходимо зарегистрировать на сервере. Для этого нужно в ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\\Server\Extensions` создать строковое значение с названием расширения (любое уникальное, на латинице, без пробелов и спец. знаков) и значением, представляющим полное имя класса, реализующего интерфейс расширения, к примеру:
 
 [source,csharp]
 ----
