Поправил ошибки сборки

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorney_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorney_CL.adoc
@@ -29,7 +29,7 @@ public sealed class PowerOfAttorney: BaseCard
 |===
 |Имя |Описание
 
-|`MainInfoProperty` |Определяет свойство "СОсновная информация".
+|`MainInfoProperty` |Определяет свойство "Основная информация".
 |`SubsidiaryPowersOfAttorneyProperty` |Определяет свойство "Системные карточки дочерних доверенностей".
 |`RepresentativesPowersProperty` |Определяет свойство "Полномочия представителей".
 |===
