Убрал 5.5 из путей реестра и из файловых путей

--- a/modules/Platform/pages/AssemblyResolver_CL.adoc
+++ b/modules/Platform/pages/AssemblyResolver_CL.adoc
@@ -60,7 +60,7 @@ namespace ObjectContextSample
 {
     internal static class ResolverInstance
     {
-        private const string ClientRootKey = @"SOFTWARE\DocsVision\Platform\5.5\Client";
+        private const string ClientRootKey = @"SOFTWARE\DocsVision\Platform\Client";
         private const string ClientBasePathValue = "BasePath";
         private static readonly Guid ResolverClsId = new Guid("230DA85B-DC28-479E-B0B8-62E05C8E3065");
         private const string DocsVisionPlatformAssembly = "DocsVision.Platform.dll";
