--- a/modules/samples/pages/solution/card-lib/lib-metadata-scheme.adoc
+++ b/modules/samples/pages/solution/card-lib/lib-metadata-scheme.adoc
@@ -23,7 +23,7 @@ image::ROOT:installers-tab-fill.png[Заполнение вкладки "Library
 +
 При необходимости (например, если клиентская часть не установлена), {wincl} запрашивает пакет установки с заданным идентификатором из общего списка пакетов, зарегистрированных на сервере {dv}. Идентификатор пакета является постоянным для пакета установки.
 +
-* _Installer_ -- относительный путь (относительно каталога `C:\Program Files (x86)\Docsvision\Platform\5.5\Site\Setup`) к пакету установки клиентской части.
+* _Installer_ -- относительный путь (относительно каталога `C:\Program Files (x86)\Docsvision\Platform\Site\Setup`) к пакету установки клиентской части.
 +
 Пакет установки клиентской части будет разработан xref:solution/installer/client.adoc[позже], но можно указать расположение заранее, либо вернуться к настройке данного параметра позже. Название подкаталога (здесь `NetstatSolutionClient`) определяется исходя из названия установочного файла.
 +
