--- a/modules/samples/pages/solution/installer/client.adoc
+++ b/modules/samples/pages/solution/installer/client.adoc
@@ -25,7 +25,7 @@
 [source,xml]
 ----
 <Component Id="RegistryEntriesComponents" Guid="76563983-1339-469A-9144-2C7C0D6C7F45">
- <RegistryKey Root="HKCU" Key="SOFTWARE\DocsVision\Platform\5.5\Client\Applications">
+ <RegistryKey Root="HKCU" Key="SOFTWARE\DocsVision\Platform\Client\Applications">
   <RegistryValue Type="string" Name="NetstatSolution" Value="NetstatSolution" />
  </RegistryKey>
 </Component>
