--- a/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
+++ b/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
@@ -16,7 +16,7 @@ image::ROOT:control-location.png[Создание проекта "Windows Forms 
 * `DocsVision.Platform.ObjectManager.dll` -- библиотека менеджера объектов. В этой библиотеке определены основные интерфейсы для взаимодействия с сервером и другими объектами системы (API).
 
 ****
-Эти сборки входят в состав как серверной, так и клиентской программ инсталляции. В случае установки только клиентской программы, их можно взять из папки пользователя, для которого проведена установка: `C:\Users\USERNAME\AppData\Local\DocsVision\5.5\Client`.
+Эти сборки входят в состав как серверной, так и клиентской программ инсталляции. В случае установки только клиентской программы, их можно взять из папки пользователя, для которого проведена установка: `C:\Users\USERNAME\AppData\Local\DocsVision\Client`.
 
 При выполнении установки сервера сборки можно взять из папки: `C:\Program Files\DocsVision\Platform\5.0`
 ****
