--- a/modules/solutions/pages/distribution-client.adoc
+++ b/modules/solutions/pages/distribution-client.adoc
@@ -13,7 +13,7 @@
 * Базовый путь для установки файлов.
 
 [#paths]
-Путь для установки файлов обычно зависит от выбранной области установки. При установке "Только для текущего пользователя" это обычно путь: `$\КАТАЛОГ_ПРОФИЛЯ_ПОЛЬЗОВАТЕЛЯ\Local Settings\DocsVision\РЕШЕНИЕ\ВЕРСИЯ\Client\`, а при установке в область "Для всех пользователей" -- путь: `$\Program Files\DocsVision\РЕШЕНИЕ}\ВЕРСИЯ\Client\`.
+Путь для установки файлов обычно зависит от выбранной области установки. При установке "Только для текущего пользователя" это обычно путь: `$\КАТАЛОГ_ПРОФИЛЯ_ПОЛЬЗОВАТЕЛЯ\Local Settings\DocsVision\РЕШЕНИЕ\ВЕРСИЯ\Client\`, а при установке в область "Для всех пользователей" -- путь: `$\Program Files\DocsVision\РЕШЕНИЕ}\Client\`.
 
 [WARNING]
 ====
