Правки версий, правки требований, чистка списка изменений

--- a/modules/Workflow/pages/Gates/DVGate.GetFunctionLinkedCard_MT.adoc
+++ b/modules/Workflow/pages/Gates/DVGate.GetFunctionLinkedCard_MT.adoc
@@ -31,4 +31,4 @@ Card:::
 == Заметки
 
 Метод `GetFunctionLinkedCard` позволяет получить (*если это предусмотрено*) идентификатор карточки, из которой был запущен бизнес-процесс. В частности, данный метод может быть использован для получения карточки задания из бизнес-процесса отправки данного задания на исполнение.
-// Особенности использования функции ("Получить карточку, связанную с функцией") приведены в документе xref:engineer _Docsvision 5. Руководство по настройке_.
+// Особенности использования функции ("Получить карточку, связанную с функцией") приведены в документе xref:engineer _Руководство по настройке_.
