Ковыряю документацию на предмет Windows и попутно правлю ссылки

--- a/modules/samples/pages/faq.adoc
+++ b/modules/samples/pages/faq.adoc
@@ -176,7 +176,7 @@ IUserProfileCardService iUserProfileCardService = objectContext.GetService<IUser
 X509Certificate2 certificate = iUserProfileCardService.GetCertificate(@"DOMAIN\IvanovII");
 ----
 +
-Для получения сертификата сотрудника с использованием метода `GetCertificate`, сертификат должен быть указан в соответствующем поле (см. Руководство по настройке), в xref:backoffice:desdirs:staff/employees/main-tab.adoc#certificate[Справочнике сотрудников].
+Для получения сертификата сотрудника с использованием метода `GetCertificate`, сертификат должен быть указан в соответствующем поле (см. Руководство по настройке), в xref:6.1@backoffice:desdirs:staff/employees/main-tab.adoc#certificate[Справочнике сотрудников].
 +
 [[get-certificate]]
 Другой вариант -- получения сертификата из хранилища сертификатов ОС Windows. В примере получаем первый сертификат с закрытым ключом.
